1st attempt to fix parallel run in docker containers