@@ -111,23 +111,27 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18</version>
+                <version>2.19.1</version>
                 <configuration>
-                     <parallel>classes</parallel>
-	                 <threadCount>1</threadCount>
+                     <parallel>all</parallel>
+	                 <threadCount>2</threadCount>
 	                 <skip>${skip.parallel}</skip>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18</version>
+                <version>2.19.1</version>
                 <configuration>
                     <includes>
                         <include>**/cucumber/*.java</include>
                     </includes>
                     <reuseForks>true</reuseForks>
                     <!--<forkCount>2</forkCount>-->
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx512m</argLine>
+                    <systemPropertyVariables>
+	                     <webdriver.driver>${webdriver.driver}</webdriver.driver>
+	                </systemPropertyVariables>
                 </configuration>
                 <executions>
                     <execution>
